# DeepRadar

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_report.yml
config/: categories.yaml  settings.yaml  sources.yaml
deepradar/: __init__.py  __main__.py  config.py  main.py  notify.py
deepradar/llm/: client.py  prompts.py  tasks.py
deepradar/processing/: dedup.py  filter.py  keywords.py  models.py  utils.py
deepradar/publish/: github_publisher.py
deepradar/report/: agent_report.py  generator.py  templates.py
deepradar/sources/: arxiv_papers.py  base.py  bluesky.py  github_trending.py  hackernews.py  reddit_rss.py  rss_blogs.py  twitter_rss.py  youtube_rss.py
docs/superpowers/plans/: 2026-04-18-ai-agent-collection.md  2026-04-18-deepradar-hardening.md  2026-04-18-source-reliability-fixes.md
docs/superpowers/specs/: 2026-04-18-ai-agent-collection-design.md  2026-04-18-deepradar-hardening-design.md  2026-04-18-source-reliability-fixes-design.md
tests/: conftest.py  test_config.py  test_notify.py
tests/llm/: test_tasks.py
tests/processing/: test_dedup.py  test_filter.py  test_keywords.py  test_models.py  test_utils.py
tests/report/: test_agent_report.py  test_generator.py
tests/sources/: test_bluesky.py  test_youtube_rss.py
